--- a/dev/pug/template/main.pug
+++ b/dev/pug/template/main.pug
@@ -20,7 +20,6 @@ html(lang="ru-RU")
 		include ../modules/header/header
 		block content
 		include ../modules/footer/footer
-		script(src="static/js/jquery-3.3.1.min.js")
 		script(src="static/js/libs.min.js")
-		script(src="static/js/main.js")
+		script(src="static/js/main.min.js")
 		block script
